--- a/imagegram/package.json
+++ b/imagegram/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "firebase": "^8.2.6",
+    "moment": "^2.29.1",
     "next": "^10.0.4",
     "prismjs": "^1.23.0",
     "react": "17.0.1",
