--- a/imagegram/package.json
+++ b/imagegram/package.json
@@ -18,6 +18,7 @@
     "prismjs": "^1.23.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-pdf": "^5.1.0",
     "tinymce": "^5.6.2"
   }
 }
